--- a/base/templates/base.html
+++ b/base/templates/base.html
@@ -35,10 +35,18 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="{% url 'player' %}">Player</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'download-songs' %}">Download Json</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-gear-wide-connected"></i>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-dark">
+                            <li><a class="dropdown-item" href="{% url 'download-songs' %}"><i class="bi bi-download"></i> Download Json</a></li>
+                            <li><a class="dropdown-item" href="{% url 'storage_service_list' %}"><i class="bi bi-hdd-stack"></i> Storage Service</a></li>
+                            <!-- <li><a class="dropdown-item" href="#">Something else here</a></li> -->
+                        </ul>
                     </li>
                 </ul>
+                
             </div>
         </div>
     </nav>
